[gd_scene load_steps=21 format=3 uid="uid://couhlepbf8cgj"]

[ext_resource type="PackedScene" uid="uid://77648svjoync" path="res://Tools/EntityBases/creatureBase.tscn" id="1_2yo06"]
[ext_resource type="Script" path="res://Tools/EntityBases/animals/basicAnimal.gd" id="2_vh30w"]
[ext_resource type="Texture2D" uid="uid://b5f8pru1elgqw" path="res://Assets/Minifantasy_Wildlife_Assets/Non-Aggressive/Squirrel/SquirrelDmg.png" id="3_08h7e"]
[ext_resource type="Texture2D" uid="uid://bdtg0os0u7u2g" path="res://Assets/Minifantasy_Magic_Weapons_And_Effects_Assets/Standalone Effects/Status Effects/Status_petrification.png" id="4_kayob"]
[ext_resource type="Texture2D" uid="uid://07ox81m87ikv" path="res://Assets/Minifantasy_Wildlife_Assets/Non-Aggressive/Squirrel/SquirrelIdle.png" id="5_uvp2r"]
[ext_resource type="Texture2D" uid="uid://s7ca10hju0s5" path="res://Assets/Minifantasy_Wildlife_Assets/Non-Aggressive/Squirrel/SquirrelWalk.png" id="6_5hpj3"]
[ext_resource type="Script" path="res://Tools/AnimationPlayerController/animationPlayerController.gd" id="7_4otht"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wexjl"]
resource_local_to_scene = true
atlas = ExtResource("3_08h7e")
region = Rect2(13, 45, 9, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_ushcn"]
atlas = ExtResource("4_kayob")
region = Rect2(234, 9, 9, 13)

[sub_resource type="Animation" id="Animation_63m85"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}

[sub_resource type="Animation" id="Animation_ct5bu"]
resource_name = "entityAppear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:atlas")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_kayob")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(234, 9, 9, 13), Rect2(202, 10, 12, 12), Rect2(172, 12, 8, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_af7xm"]
resource_name = "entityDisappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:atlas")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_kayob")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(172, 12, 8, 8), Rect2(202, 10, 12, 12), Rect2(234, 9, 9, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bn3oo"]
resource_local_to_scene = true
_data = {
"RESET": SubResource("Animation_63m85"),
"entityAppear": SubResource("Animation_ct5bu"),
"entityDisappear": SubResource("Animation_af7xm")
}

[sub_resource type="Animation" id="Animation_cxjjb"]
resource_name = "animalIdleLeft"
length = 3.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_uvp2r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(13, 46, 7, 5), Rect2(45, 46, 8, 5), Rect2(77, 46, 8, 5), Rect2(108, 47, 9, 4), Rect2(140, 47, 9, 4), Rect2(172, 47, 9, 4), Rect2(204, 47, 9, 4), Rect2(237, 46, 8, 5), Rect2(269, 46, 8, 5), Rect2(301, 46, 7, 5), Rect2(333, 46, 8, 5), Rect2(366, 46, 7, 5), Rect2(398, 46, 7, 5), Rect2(430, 46, 7, 5), Rect2(462, 46, 7, 5), Rect2(493, 46, 8, 5), Rect2(525, 46, 7, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1.4, 1.8, 2, 2.2, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(1.6, -2.675), Vector2(1.905, -2.675), Vector2(1.925, -2.675), Vector2(1.54, -2.08), Vector2(1.92, -2.595), Vector2(1.45, -2.595), Vector2(1.885, -2.595), Vector2(2.475, -2.595), Vector2(1.965, -2.595), Vector2(1.575, -2.595)]
}

[sub_resource type="Animation" id="Animation_6ov1p"]
resource_name = "animalIdleRight"
length = 3.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_uvp2r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(12, 14, 7, 5), Rect2(43, 14, 8, 5), Rect2(75, 14, 8, 5), Rect2(107, 15, 9, 4), Rect2(107, 15, 9, 4), Rect2(107, 15, 9, 4), Rect2(107, 15, 9, 4), Rect2(235, 14, 8, 5), Rect2(267, 14, 8, 5), Rect2(300, 14, 7, 5), Rect2(331, 14, 8, 5), Rect2(363, 14, 7, 5), Rect2(395, 14, 7, 5), Rect2(427, 14, 7, 5), Rect2(459, 14, 7, 5), Rect2(491, 14, 8, 5), Rect2(524, 14, 7, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1.4, 1.6, 1.8, 2, 2.2, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0.53, -2.675), Vector2(0.035, -2.675), Vector2(0.055, -2.675), Vector2(0.25, -2.08), Vector2(0.025, -2.595), Vector2(0.025, -2.595), Vector2(0.545, -2.595), Vector2(0.03, -2.595), Vector2(-0.45, -2.595), Vector2(-0.01, -2.595), Vector2(0.52, -2.595)]
}

[sub_resource type="Animation" id="Animation_kpgmo"]
resource_name = "animalWalkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_5hpj3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(12, 45, 9, 6), Rect2(44, 45, 9, 5), Rect2(76, 44, 8, 7), Rect2(109, 46, 7, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1.6, -2.675), Vector2(1.905, -3.855), Vector2(1.925, -3.645), Vector2(1.54, -2.705)]
}

[sub_resource type="Animation" id="Animation_ig7j7"]
resource_name = "animalWalkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_5hpj3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(11, 13, 9, 6), Rect2(43, 13, 9, 5), Rect2(76, 12, 8, 7), Rect2(108, 14, 7, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-0.455, -3.08), Vector2(0.025, -3.855), Vector2(0.45, -3.645), Vector2(0.6, -2.705)]
}

[sub_resource type="Animation" id="Animation_b2ir7"]
resource_name = "animalHurtRight"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_08h7e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(11, 13, 9, 6), Rect2(42, 12, 10, 7), Rect2(75, 15, 9, 4), Rect2(107, 15, 9, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1.39, -3.08), Vector2(0.985, -3.855), Vector2(0.66, -2.145), Vector2(0.92, -2.12)]
}

[sub_resource type="Animation" id="Animation_ptapu"]
resource_name = "animalHurtLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:atlas")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_08h7e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(13, 45, 9, 6), Rect2(43.6425, 43.7655, 10.3575, 7.23449), Rect2(76, 47, 9, 4), Rect2(108, 47, 9, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(2.5, -3.08), Vector2(1.64, -3.855), Vector2(1.54, -2.145), Vector2(1.355, -2.12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn1ys"]
_data = {
"animalHurtLeft": SubResource("Animation_ptapu"),
"animalHurtRight": SubResource("Animation_b2ir7"),
"animalIdleLeft": SubResource("Animation_cxjjb"),
"animalIdleRight": SubResource("Animation_6ov1p"),
"animalWalkLeft": SubResource("Animation_kpgmo"),
"animalWalkRight": SubResource("Animation_ig7j7")
}

[node name="SquirrelBase" groups=["Animal"] instance=ExtResource("1_2yo06")]
script = ExtResource("2_vh30w")

[node name="Shadow" parent="." index="0"]
scale = Vector2(0.28125, 0.28125)
offset = Vector2(-2, -1.08)

[node name="TopDownEntity2D" parent="." index="1"]
speed = 50.0

[node name="DamageReceiver" parent="." index="2"]
max_amount = 30.0
_amount = 30.0

[node name="HealthBar" parent="." index="3"]
offset_top = -11.08
offset_bottom = -6.08

[node name="Sprite2D" parent="." index="4"]
texture = SubResource("AtlasTexture_wexjl")
offset = Vector2(2.5, -3.08)

[node name="Strafer" parent="." index="6"]
max_stand_still_time = 5.0
min_strafe_distance = 10.0
max_strafe_distance = 40.0

[node name="ChaserEvader" parent="." index="7"]
enabled = true
evade = Array[String](["Hostile", "Player"])
prioritize = 1

[node name="Vision" parent="." index="8"]
distance = 70

[node name="AppearDisappearAnimationPlayer" parent="AppearDisappear" index="0"]
libraries = {
"": SubResource("AnimationLibrary_bn3oo")
}

[node name="AppearDisappearSprite" parent="AppearDisappear" index="1"]
texture = SubResource("AtlasTexture_ushcn")

[node name="AnimationPlayerController" type="AnimationPlayer" parent="." index="17"]
libraries = {
"": SubResource("AnimationLibrary_nn1ys")
}
script = ExtResource("7_4otht")

[connection signal="velocity_computed" from="NavigationAgent2D" to="TopDownEntity2D" method="_on_velocity_computed"]
